# google-pack

./: Cargo.toml  README.md
.github/workflows/: release.yml
crates/android-signer-cli/: Cargo.toml
crates/android-signer-cli/src/: main.rs
crates/android-signer-lib/: Cargo.toml
crates/android-signer-lib/src/: bin.rs  crypto.rs  crypto_keys.rs  error.rs  hasher.rs  lib.rs  signed_data_block.rs  signing_block.rs  v1_signing.rs  zip.rs  zip_parser.rs  zip_rebuilder.rs
