[package]
name = "android-signer-lib"
version = "0.1.0"
edition = "2021"

[features]
default = []
cert-gen = ["dep:rcgen", "dep:rand"]

[dependencies]
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }
rsa = { version = "0.9.9", features = ["sha2"] }
sha2 = { version = "0.10.9", features = ["oid"] }
deku = "0.19.1"
byteorder = "1.5.0"
pem = "3.0.5"
p12 = "0.6.3"
base64 = "0.22.1"
rasn-cms = "0.27.3"
rasn = "0.27.2"
rasn-pkix = "0.27.3"
xml-rs = "0.8.21"
# This is required for randomly generated X.509 Certificates.
# If you are providing your own certificate to PACK, turn it off.
rcgen = { version = "0.14.6", optional = true }
rand = { version = "0.8.5", optional = true }
